--- a/src/lib/stores/translations/uk.json
+++ b/src/lib/stores/translations/uk.json
@@ -232,8 +232,16 @@
                         "description": "Для полів з Markdown вмістом."
                     },
                     "time": {
-                        "name": "Увімкнути час",
-                        "description": "Розпізнати це поле як Дата і час."
+                        "name": "Включити час",
+                        "description": "Включити час у поле дати"
+                    },
+                    "dday": {
+                        "name": "D-day",
+                        "description": "Показати відлік D-day для цього поля дати"
+                    },
+                    "progress": {
+                        "name": "Прогрес",
+                        "description": "Використовувати це числове поле як індикатор прогресу (0-100%)"
                     },
                     "save": "Зберегти"
                 },
@@ -360,6 +368,11 @@
                     }
                 },
                 "empty": "Цей вигляд порожній."
+            },
+            "project": {
+                "progress": {
+                    "title": "Прогрес проекту"
+                }
             }
         },
         "components": {
